Project

General

Profile

Actions

Bug #21703

closed

RUBY_CRASH_REPORT does not work when shelling out in some cases

Bug #21703: RUBY_CRASH_REPORT does not work when shelling out in some cases

Added by peterzhu2118 (Peter Zhu) 10 months ago. Updated 11 days ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:123881]

Description

GitHub PR: https://github.com/ruby/ruby/pull/15292

RUBY_CRASH_REPORT does not work in some cases when shelling out on Linux. For example, given the following shell script dump.sh:

#!/usr/bin/env bash
cat > /tmp/crash

And we see it fails like this:

$ RUBY_CRASH_REPORT="|dump.sh" ruby -rfiddle -e "Fiddle::Pointer.new(1, 10)[0]"
cat: -: Resource temporarily unavailable
Actions

Also available in: PDF Atom