Don't use non blocking pipes for RUBY_CRASH_REPORT

[Bug #21703]

RUBY_CRASH_REPORT does not work in some cases when shelling out on Linux.
For example, given the following shell script dump.sh:

    #!/usr/bin/env bash
    cat > /tmp/crash

And we see it fails like this:

    $ RUBY_CRASH_REPORT="|dump.sh" ruby -rfiddle -e "Fiddle::Pointer.new(1, 10)[0]"
    cat: -: Resource temporarily unavailable